--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         </div>
         <div id="child2">
-       <img src="Flower asset/pngwing 8.png" alt="flower-image">
+       <img src="Flower asset/pngwing 7.png">
         </div>
     </div>
 </section>
@@ -70,7 +70,7 @@
 
         </div>
         <div id="fourth_section_child2">
-       <img src="Flower asset/pngwing 8.png" alt="flower-image">
+       <img src="Flower asset/pngwing 7.png">
         </div>
     </div>
 </section>
